added basic calculations for isha iqamah.  Still need to handle Ramadhan timings.